# ito

./: .env.example  .env.local  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Inten.spec  Ito.spec  Makefile  README.md  build-app-unified.sh  build-app-windows.sh  build-app.sh  build-binaries-workspace.sh  build-binaries.sh  build.sh  bun.lockb  config.ini.example  debug-compromise.js  dev.py  electron-builder.config.js  electron-builder.yml  electron.vite.config.1758751046988.mjs  entitlements.plist  eslint.config.mjs  extension_key.pub  foo.py  icon.icns  install.sh  notarize.sh  package.json  pyinput_test.py  pyproject.toml  pytest.ini  requirements.txt  requirements_backup.txt  sample.txt  setup.py  (+5 more)
.claude/: settings.local.json
.cursor/rules/: always.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/workflows/: app-deploy.yml  build-and-deploy.yml  build-image.yml  build.yml  changelog-check.yml  changelog.yml  ci-controller.yml  deploy-server.yml  dev-branch.yml  external-contributions.yml  infra-deploy.yml  lint.yml  main-branch.yml  native-tests.yml  shared-ci.yml  test-runner.yml
.husky/: pre-commit
app/: app.tsx  index.d.ts  index.html  renderer.tsx  sentry.ts
app/components/: GlobalKeyListener.tsx  Pill.tsx
app/hooks/: useBillingState.test.ts  useBillingState.ts  useDeviceChangeListener.ts  useFreeTrial.ts  useGlobalShortcut.ts  usePlatform.ts
app/media/: microphone.ts
app/store/: useAdvancedSettingsStore.ts  useAudioStore.ts  useAuthStore.ts  useContextStore.ts  useDictionaryStore.ts  useMainStore.ts  useNotesStore.ts  useOnboardingStore.ts  usePermissionsStore.ts  useSettingsStore.ts  useUserMetadataStore.ts
app/styles/: app.css  window.css
app/utils/: healthCheck.ts  hotkeysManager.ts  keyboard.test.ts  keyboard.ts  keyboardShortcutManager.ts  userMetrics.ts  utils.ts
extension/: background.js  com.openwater.app.json  content.js  manifest.json  popup.html  popup.js
lib/__tests__/: setup.ts
lib/auth/: Auth0Provider.tsx  config.ts  events.test.ts  events.ts  useAuth.ts
lib/clients/: grpcClient.test.ts  grpcClient.ts  itoHttpClient.ts
lib/constants/: external-links.ts  generated-defaults.ts  keyboard-defaults.ts  languages.ts  store-keys.ts
lib/main/: analyticsService.ts  app.ts  autoUpdaterWrapper.ts  index.d.ts  itoController.ts  itoSession.test.ts  itoSession.ts  itoSessionManager.test.ts  itoSessionManager.ts  itoStreamController.test.ts  itoStreamController.ts  logger.ts  main.ts  recordingStateNotifier.ts  store.test.ts  store.ts  syncService.test.ts  syncService.ts  teardown.ts  timingService.ts  traceLogger.test.ts  traceLogger.ts  transcriptionService.test.ts  transcriptionService.ts  tray.ts  voiceInputService.test.ts  voiceInputService.ts
lib/media/: accessibilityContextProvider.ts  active-application.test.ts  active-application.ts  audio.test.ts  audio.ts  context-service.ts  cursorContext.ts  keyboard.test.ts  keyboard.ts  macOSAccessibilityContextProvider.ts  microphone.ts  microphoneSetUp.ts  native-interface.test.ts  native-interface.ts  selected-text-reader.test.ts  selected-text-reader.ts  systemAudio.ts  text-writer.ts  typingState.ts
lib/preload/: api.ts  index.d.ts  preload.ts
lib/protocol/: index.ts
lib/types/: analytics.ts  cursorContext.ts  ipc.ts  keyboard.ts  timing.ts
lib/utils/: applicationDetection.ts  crossPlatform.ts  settings.test.ts  settings.ts
lib/window/: ipcDev.ts  ipcEvents.test.ts  ipcEvents.ts
native/: Cargo.toml
native/active-application/: Cargo.toml  active-application.manifest  build.rs
native/active-application/src/: main.rs
native/audio-recorder/: Cargo.toml  audio-recorder.manifest  build.rs
native/audio-recorder/src/: main.rs
native/global-key-listener/: Cargo.toml  README.md  build.rs  global-key-listener.manifest
native/global-key-listener/src/: key_codes.rs  main.rs
native/selected-text-reader/: Cargo.toml  build.rs  selected-text-reader.manifest  test_copy.rs
native/selected-text-reader/src/: cross_platform.rs  linux.rs  macos.rs  main.rs  windows.rs
native/text-writer/: Cargo.toml  build-msvc.bat  build.rs  text-writer.manifest
native/text-writer/src/: macos_writer.rs  main.rs  windows_writer.rs
scripts/: clean-app-data.js  generate-constants.js
server/: .dockerignore  .env.development  .env.example  AUTH0_SETUP.md  Dockerfile  README.md  buf.gen.yaml  bun.lockb  deploy-dev.sh  docker-compose.yml  package.json  test-auth-client.ts  test-client.ts  test-connect-client.ts  tsconfig.json
server/infra/: .gitignore  cdk.context.json  package-lock.json  package.json
server/scripts/: deploy-dev.sh  migrate-audio-to-s3.ts  run-migration.ts  setup-minio.sh
server/src/: Dockerfile  db.ts  index.ts  ito.proto  server.ts
server/static/: README.md  callback.html
src/: ai.inten.app.json  app_config.py  application.py  application_interface.py  application_manager.py  asr_handler.py  asyncio_loop_manager.py  audio_handler.py  command_processor.py  constants.py  containers.py  context_manager.py  discrete_application_runner.py  discrete_audio_application.py  home_window.py  launch_native_host.sh  llm_handler.py  main.py  native_messaging_host.py  native_messaging_host.sh  onboarding.py  one_shot_application_runner.py  output_handler.py  platform_utils_macos.py  prompt_templates.py  settings_ui.py  setup.py  streaming_application_runner.py  streaming_audio_application.py
src/analytics/: amplitude_manager.py
src/apple_scripts/: get_active_body.applescript  notes.py  set_active_body.applescript
src/apps/: browser.py  google_chrome.py  macos.py  notes.py  text_edit.py
src/audio/: asr_handler_interface.py  audio_device_manager.py  audio_recorder.py  audio_source_handler.py  audio_source_interface.py  convert_wav_to_buffer.py  faster_whisper_asr_handler.py  gemini_asr_handler.py  groq_asr_handler.py  openai_asr_handler.py
src/clients/: gemini_client.py  types.py  (+5 more)
utils/: draw_red_dot.py  json_debug_tools.py  list_audio_devices.py  move_cursor_to_macos.py
(+255 files in other folders)
