[tool.poetry]
name = "inten"
version = "0.1.0"
description = ""
authors = ["Demox Labs <support@demoxlabs.xyz>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
numpy = "2.2.4"
pynput = "1.8.1"
sounddevice = "0.5.1"
openai = "1.72.0"
pyautogui = "0.9.54"
PyAudio = "0.2.14"
soundfile = "0.13.1"
requests = "2.32.3"
scipy = "1.15.2"
faster-whisper = "1.1.1"
PyYAML = "6.0.2"
psutil = "7.0.0"
coloredlogs = "15.0.1"
pyobjc-core = { version = "*", markers = "sys_platform == 'darwin'" }
rubicon-objc = "*"
py2app = "*"
setuptools = "*"
wheel = "*"
dependency-injector = "^4.46.0"
deepdiff = "^8.4.2"
groq = "^0.24.0"
google-genai = "^1.14.0"
pyside6 = "^6.9.0"
rich = "^14.0.0"
watchdog = "^6.0.0"
appnope = "^0.1.4"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-mock = "*"
ruff = "*"
black = "*"
pre-commit = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"
extend-select = [
  "I",
  "UP",
  "F",
  "B",
  "A",
] # I = isort, UP = pyupgrade, F = pyflakes, B = bugbear, A = flake8-annotations
exclude = ["dist", "build"]
fix = true

[tool.ruff.lint]
select = ["I"] # Only auto-fix for import sorting
