[workspace]
members = [
    "global-key-listener",
    "audio-recorder",
    "text-writer",
    "active-application",
    "selected-text-reader"
]
resolver = "2"

# Share dependencies across workspace members where possible
[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Optimize release builds
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true