[workspace]
members = [
    "global-key-listener",
    "audio-recorder",
    "text-writer",
    "active-application",
    "selected-text-reader",
]

resolver = "2"

# Shared dependencies across workspace members can be defined here
[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
