[package]
name = "active-application"
version = "0.1.0"
edition = "2024"

[dependencies]
active-win-pos-rs = "0.9.0"
serde = "1.0.219"
serde_json = "1.0.141"

[build-dependencies]
winres = "0.1"

[package.metadata.winres]
FileDescription = "Active Window Monitor - Detects active application for accessibility and productivity applications"
ProductName = "Active Application - Accessibility Tool"
CompanyName = "Demox Labs"
LegalCopyright = "Copyright © 2025 Demox Labs. All rights reserved."
OriginalFilename = "active-application.exe"
ProductVersion = "1.0.0.0"
FileVersion = "1.0.0.0"
InternalName = "active-application"
Comments = "Accessibility utility for active window detection via command-line interface"

[lints]
workspace = true
