[package]
name = "audio-recorder"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5"
anyhow = "1.0.98"
rubato = "0.16.2"
num-traits = "0.2.19"
dasp_sample = "0.11.0"

[build-dependencies]
tauri-winres = "0.1"

[package.metadata.winres]
FileDescription = "Audio Recording Utility - Captures audio input for accessibility and productivity applications"
ProductName = "Audio Recorder - Accessibility Tool"
CompanyName = "Demox Labs"
LegalCopyright = "Copyright © 2025 Demox Labs. All rights reserved."
OriginalFilename = "audio-recorder.exe"
ProductVersion = "1.0.0.0"
FileVersion = "1.0.0.0"
InternalName = "audio-recorder"
Comments = "Accessibility utility for audio recording via command-line interface"

[lints]
workspace = true
