[package]
name = "selected-text-reader"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5"
arboard = "3.4"
lru = "0.12"
parking_lot = "0.12"
enigo = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
selection = "1.2.0"

[target.'cfg(target_os = "macos")'.dependencies]
accessibility-ng = "0.1.6"
accessibility-sys-ng = "0.1"
active-win-pos-rs = "0.8"
core-foundation = "0.9"
libc = "0.2"

[build-dependencies]
winres = "0.1"

[package.metadata.winres]
FileDescription = "Selected Text Reader - Captures selected text for accessibility and productivity applications"
ProductName = "Selected Text Reader - Accessibility Tool"
CompanyName = "Demox Labs"
LegalCopyright = "Copyright © 2025 Demox Labs. All rights reserved."
OriginalFilename = "selected-text-reader.exe"
ProductVersion = "1.0.0.0"
FileVersion = "1.0.0.0"
InternalName = "selected-text-reader"
Comments = "Accessibility utility for selected text capture via command-line interface"
