[package]
name = "text-writer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
enigo = "0.3.0"

[target.'cfg(target_os = "windows")'.dependencies]
enigo = "0.3.0"
clipboard-win = "5.0"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
core-foundation = "0.9"
cocoa = "0.25"

[build-dependencies]
tauri-winres = "0.1"

[package.metadata.winres]
FileDescription = "Accessibility Text Input Utility - Assists with text entry for productivity applications"
ProductName = "Text Writer - Accessibility Tool"
CompanyName = "Demox Labs"
LegalCopyright = "Copyright © 2025 Demox Labs. All rights reserved."
OriginalFilename = "text-writer.exe"
ProductVersion = "1.0.0.0"
FileVersion = "1.0.0.0"
InternalName = "text-writer"
Comments = "Accessibility utility for enhanced text input via command-line interface"

[lints]
workspace = true
